js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib1/l1.3.kt
interface Module1Interface {
    public fun testFunction2() = 2
    public fun testFunction22() = 22

    public val testField222: Int
        get() = 222
}
